Update description with temperature increase

--- a/pages/climate_anomaly/index.html
+++ b/pages/climate_anomaly/index.html
@@ -116,7 +116,8 @@
       <span id="year2019" class="year">2019</span>
       Compared to the <i>average</i> August in the span 1951-1980 the August
       2019 was hotter in the <span style="color:red">red</span> regions and
-      cooler in the <span style="color:blue">blue</span> regions.
+      cooler in the <span style="color:blue">blue</span> regions. The hottest
+      area / longest red line is about +8 degrees Celsius "longer/hotter".
       <!--
       <span id="year1990" class="year">1990</span> <span id="year1995"
       class="year">1995</span> <span id="year2000" class="year">2000</span>
@@ -127,10 +128,7 @@
       World Temperature Anomaly August 2019
     </div>
 
-    <script
-      type="text/javascript"
-      src="globe/third-party/Detector.js"
-    ></script>
+    <script type="text/javascript" src="globe/third-party/Detector.js"></script>
     <script
       type="text/javascript"
       src="globe/third-party/three.min.js"
