Add some commercials

--- a/pages/climate_anomaly/index.html
+++ b/pages/climate_anomaly/index.html
@@ -104,7 +104,7 @@
       <span class="bull">&bull;</span>
     -->
     <div id="info">
-      Created by R. Siegbert based on
+      Created by <a href="https://rscircus.github.io">R. Siegbert</a> based on
       <a href="https://github.com/dataarts/webgl-globe" target="_blank"
         >WebGL Globe</a
       >
