--- a/pages/climate_anomaly/index.html
+++ b/pages/climate_anomaly/index.html
@@ -174,6 +174,13 @@
         TWEEN.start();
 
         xhr = new XMLHttpRequest();
+        /* Debug:
+        xhr.open(
+          'GET',
+          'ghcn_nasa_aug/ghcn_aug_2019_anomaly_1951_1980_base.json',
+          true,
+        );
+        */
         xhr.open(
           'GET',
           'https://rscircus.github.io/pages/climate_anomaly/ghcn_nasa_aug/ghcn_aug_2019_anomaly_1951_1980_base.json',
