Add hammerjs to handle the pinch event

--- a/pages/climate_anomaly/index.html
+++ b/pages/climate_anomaly/index.html
@@ -134,6 +134,7 @@
       src="globe/third-party/three.min.js"
     ></script>
     <script type="text/javascript" src="globe/third-party/Tween.js"></script>
+    <script type="text/javascript" src="globe/third-party/hammer.min.js"></script>
     <script type="text/javascript" src="globe/globe.js"></script>
     <script type="text/javascript">
       if (!Detector.webgl) {
