Update to three.js and include WebVR.js

--- a/pages/climate_anomaly/index.html
+++ b/pages/climate_anomaly/index.html
@@ -131,9 +131,10 @@
     <script type="text/javascript" src="globe/third-party/Detector.js"></script>
     <script
       type="text/javascript"
-      src="globe/third-party/three.min.js"
+      src="globe/third-party/three.js"
     ></script>
     <script type="text/javascript" src="globe/third-party/Tween.js"></script>
+    <script type="text/javascript" src="globe/third-party/WebVR.js"></script>
     <script type="text/javascript" src="globe/third-party/hammer.min.js"></script>
     <script type="text/javascript" src="globe/globe.js"></script>
     <script type="text/javascript">
