Switch back to div as container

--- a/pages/climate_anomaly/index.html
+++ b/pages/climate_anomaly/index.html
@@ -147,8 +147,8 @@
         Detector.addGetWebGLMessage();
       } else {
         var years = ['2019'];
-        //var container = document.getElementById('container');
-        var container = document.body
+        var container = document.getElementById('container');
+        //var container = document.body
         var globe = new DAT.Globe(container);
 
         console.log(globe);
