--- a/pages/climate_anomaly/index.html
+++ b/pages/climate_anomaly/index.html
@@ -134,6 +134,7 @@
     </div>
 
     <script type="text/javascript" src="globe/third-party/Detector.js"></script>
+    <script src="globe/third-party/HelioWebXRPolyfill.js"></script>
     <script
       type="text/javascript"
       src="globe/third-party/three.js"
